fix white space on ohbm presentation page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 */
 
 html, body, div, span, applet, object,
-h1, h2, h3, h4, h5, h6, p, blockquote,
+iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
@@ -26,7 +26,7 @@ section, summary, time, mark, audio, video {
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, iframe {
+footer, header, hgroup, menu, nav, section {
 	display: block;}
 
 body {
